--- a/pages/demo12/index.html
+++ b/pages/demo12/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <title></title>
+    <meta charset=UTF-8>
     <style>canvas { width: 100%; height: 100% }</style>
     <script src="../../lib/three.js"></script>
+    <script src="../../lib/utils/SceneUtils.js"></script>
     <script src="../../lib/controls/TrackballControls.js"></script>
     <script src="../../lib/tween.min.js"></script>
     <style type="text/css">
