--- a/pages/demo4-texture/index.html
+++ b/pages/demo4-texture/index.html
@@ -4,14 +4,19 @@
     <title></title>
     <style>canvas { width: 100%; height: 100% }</style>
     <script src="../../lib/three.js"></script>
+    <script src="../../lib/controls/TrackballControls.js"></script>
     <script src="../../lib/tween.min.js"></script>
     <style type="text/css">
+        html, body {
+            height: 100%;
+            background-color: #000;
+        }
         div#canvas-frame {
             border: none;
             cursor: pointer;
             width: 100%;
             height: 600px;
-            background-color: #EEEEEE;
+            background-color: #000000;
         }
     </style>
 </head>
