--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>DEMOS</title>
+    <style>
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        li {
+            list-style: none;
+            width: 200px;
+            height: 200px;
+            line-height: 200px;
+            text-align: center;
+            background: rgba(221, 240, 237, .5);
+            margin: 10px;
+        }
+        li a {
+            width: 100%;
+            height: 100%;
+            display: block;
+            text-decoration: none;
+            color: #999999;
+        }
+        li a:visited {
+            color: #999999;
+        }
+    </style>
 </head>
 <body>
     <ul>
+        <li><a href="pages/demo1-line/">画线</a></li>
+        <li><a href="pages/demo2-animate/">动画</a></li>
+        <li><a href="pages/demo3-light/">光源</a></li>
+        <li><a href="pages/demo4-texture/">材质</a></li>
+        <li><a href="pages/demo5-drawcube/">立方体</a></li>
+        <li><a href="pages/demo6-coord/">坐标系</a></li>
+        <li><a href="pages/demo7-drawcube/">立方体</a></li>
+        <li><a href="pages/demo8-trackball/">trackball</a></li>
+        <li><a href="pages/demo9-Geometry/">geometry</a></li>
+        <li><a href="pages/demo10-ball/">球&调试</a></li>
+        <li><a href="pages/demo11-rubik/">基础魔方</a></li>
+        <li><a href="pages/demo12-raycaster/">raycaster</a></li>
+        <li><a href="pages/demo13-pointcloud/">点云</a></li>
+        <li><a href="pages/demo14-changeShape/">变形</a></li>
+        <li><a href="pages/demo15-rubik/">完整魔方</a></li>
+        <li><a href="pages/demo16-physijs/">物理引擎</a></li>
         <li><a href="pages/demo17-solarSystem/">太阳系</a></li>
     </ul>
 </body>
