--- a/pages/demo15-rubik/index.html
+++ b/pages/demo15-rubik/index.html
@@ -10,14 +10,13 @@
     <style type="text/css">
         html, body {
             height: 100%;
-            background-color: #000;
+            background-color: #f00;
         }
         div#canvas-frame {
             border: none;
             cursor: pointer;
             width: 100%;
             height: 600px;
-            background-color: #000000;
         }
         .tools {
             position: absolute;
